[FIX] sciencix_sale: align last cell of totals tables to right.

--- a/sciencix_sale/static/less/change_report_layout.less
+++ b/sciencix_sale/static/less/change_report_layout.less
@@ -2,7 +2,7 @@
     table.table-totals {
         thead {
             tr th:last-child {
-                text-align: left !important;
+                text-align: right !important;
             }
         }
         tbody {
@@ -11,7 +11,7 @@
                     text-align: right !important;
                 }
                 td:last-child {
-                    text-align: left !important;
+                    text-align: right !important;
                 }
             }
         }
